package NDnnProto;

import "epsp.proto";

message TKernelOptions {
    optional TEpspOptions EpspOptions = 1;
};